<resources>
    <string name="app_name" translatable="false">HillClimbRacing</string>
    <!-- TITLES -->
    <string name="title_tracks">Tracks</string>
    <string name="title_map">Map</string>
    <string name="title_profile_setup">Setup profile</string>
    <string name="title_add_track">Add a track</string>
    <string name="title_edit_track">Edit track</string>

    <!-- h1 -->
    <string name="h1_profile_setup">Profile setup</string>

    <!-- BUTTONS -->
    <string name="btn_confirm">Confirm</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_add">Add</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_start">Start</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_stop">Stop</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_cancel">Cancel</string>

    <!-- LABELS -->
    <string name="label_firstname">Firstname</string>
    <string name="label_lastname">Lastname</string>
    <string name="label_email" translatable="false">Email</string>
    <string name="label_birthdate">Birthdate</string>
    <string name="label_title">Title</string>
    <string name="label_desc">Description</string>
    <string name="label_difficulty">Difficulty</string>
    <string name="label_start_loc">Start location</string>
    <string name="label_finish_loc">Finish location</string>

    <!-- HINTS -->
    <string name="hint_firstname">Bob</string>
    <string name="hint_lastname">Smith</string>
    <string name="hint_email">bob.smith@gmail.com</string>
    <string name="hint_birthdate" translatable="false">19/04/2001</string>
    <string name="hint_track_title" translatable="false">Piramida</string>
    <string name="hint_desc">Description</string>
    <string name="hint_loc" translatable="false">46.55/15.63</string>
    <string name="hint_loc2" translatable="false">46.59/15.43</string>

    <!-- MODALS -->
    <string name="modal_delete_track_title">Delete track</string>
    <string name="modal_delete_track_desc">Are you sure you would like to delete %s?</string>

    <!-- INFO -->
    <string name="info_timer_usage">Press on the timer to start/stop</string>

    <!-- ERROR MESSAGES -->
    <string name="invalid_first_name">Invalid firstname!</string>
    <string name="invalid_last_name">Invalid lastname!</string>
    <string name="invalid_email">Invalid email!</string>
    <string name="invalid_birthdate">Invalid birthdate!</string>
    <string name="invalid_location_start">Invalid start location!</string>
    <string name="invalid_location_finish">Invalid finish location!</string>
    <string name="empty_fields">Fill out the fields!</string>
    <string name="profile_not_set_up">Profile setup required!</string>

    <string name="location_disabled">Location service is disabled!</string>
    <string name="loc_distance_meters_away">You are %d meters away!</string>
    <string name="loc_distance_meters_to_finish">%d meters to finish!</string>

    <!-- SHARED PREFS -->
    <string name="SHR_PREF_PATH" translatable="false">ShrPref</string>
    <string name="SHR_PREF_SESSION_ID" translatable="false">SessionId</string>
    <string name="SHR_PREF_RACER_ID" translatable="false">RacerId</string>
    <string name="SHR_PREF_TIMER_START" translatable="false">TimerStart</string>
    <string name="SHR_PREF_TIMER_RUNNING" translatable="false">TimerState</string>
    <string name="SHR_PREF_TIMER_TRACK_ID" translatable="false">TimerTrackId</string>

    <!-- TIMER SERVICE -->
    <string name="TIMER_SERVICE_VAR" translatable="false">TIME_REMAINING</string>
    <string name="TIMER_UPDATE_ACTION" translatable="false">TIMER_UPDATE_ACTION</string>
    <string name="TIMER_VALUE" translatable="false">TIMER_VALUE</string>

    <!-- NOTIFICATIONS -->
    <string name="NOTIFICATIONS_CHANNEL_ID" translatable="false">HILL_CLIMB_RACING_NOTIFIER</string>
    <string name="NOTIFICATION_NEW_TRACK" translatable="false">New track!</string>

    <!-- LOCAL JSON DATA FILE -->
    <string name="JSON_DATA_PATH" translatable="false">hcr_data.json</string>

    <!-- FIREBASE -->
    <string name="FIREBASE_TRACKS" translatable="false">tracks</string>
    <string name="FIREBASE_RACERS" translatable="false">racers</string>
    <string name="FIREBASE_SCORES" translatable="false">scores</string>

    <!-- AUTO GENERATED -->
    <string name="hello_blank_fragment" translatable="false" />
</resources>