<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_std"
    tools:context=".TrackInputFragment">

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_sign_post"
        android:backgroundTint="@color/purple_700"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        app:layout_constraintDimensionRatio="1:1"/>

    <TextView
        android:id="@+id/labelTrackTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/padding_std"
        android:text="@string/label_title"
        app:layout_constraintBottom_toTopOf="@+id/labelTrackDesc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline3" />

    <TextView
        android:id="@+id/labelTrackDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/padding_std"
        android:text="@string/label_desc"
        app:layout_constraintBottom_toTopOf="@+id/labelDifficulty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelTrackTitle" />

    <TextView
        android:id="@+id/labelDifficulty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/padding_std"
        android:text="@string/label_difficulty"
        app:layout_constraintBottom_toTopOf="@+id/labelStartLoc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelTrackDesc" />

    <TextView
        android:id="@+id/labelStartLoc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/padding_std"
        android:text="@string/label_start_loc"
        app:layout_constraintBottom_toTopOf="@+id/labelFinishLoc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelDifficulty" />

    <TextView
        android:id="@+id/labelFinishLoc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/padding_std"
        android:text="@string/label_finish_loc"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelStartLoc" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_delete"
        android:layout_marginEnd="@dimen/margin_std"
        android:backgroundTint="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@id/btnSetTrack"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="@+id/barrier"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <Button
        android:id="@+id/btnSetTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_add"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/labelTrackTitle"
        app:layout_constraintGuide_percent="0.15"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintGuide_percent="0.70"
        app:layout_constraintTop_toBottomOf="@+id/labelFinishLoc" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.80"
        app:layout_constraintTop_toBottomOf="@+id/guideline4" />

    <EditText
        android:id="@+id/inputTrackTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_std"
        android:hint="@string/hint_track_title"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/labelTrackTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/barrier"
        app:layout_constraintTop_toTopOf="@+id/inputTrackDesc" />

    <EditText
        android:id="@+id/inputTrackDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_std"
        android:hint="@string/hint_desc"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/labelTrackDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/barrier"
        app:layout_constraintTop_toTopOf="@+id/spinner_difficulty" />

    <Spinner
        android:id="@+id/spinner_difficulty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_std"
        android:textSize="@dimen/text_size_std"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/barrier"
        app:layout_constraintTop_toTopOf="@+id/labelDifficulty"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/inputStartLoc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_std"
        android:hint="@string/hint_loc"
        android:inputType="textEmailAddress"
        app:layout_constraintBaseline_toBaselineOf="@+id/labelStartLoc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/barrier" />

    <EditText
        android:id="@+id/inputFinishLoc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_std"
        android:hint="@string/hint_loc2"
        android:inputType="date"
        app:layout_constraintBaseline_toBaselineOf="@+id/labelFinishLoc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/barrier" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:barrierDirection="end"
        app:constraint_referenced_ids="labelTrackTitle,labelDifficulty,labelStartLoc,labelFinishLoc" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />
</androidx.constraintlayout.widget.ConstraintLayout>