<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_std"
    tools:context=".fragments.RacerFragment">

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_user"
        android:backgroundTint="@color/purple_700"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        app:layout_constraintDimensionRatio="1:1"/>

    <TextView
        android:id="@+id/labelFirstname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/padding_std"
        android:text="@string/label_firstname"
        app:layout_constraintBottom_toTopOf="@+id/labelDifficulty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline3" />

    <TextView
        android:id="@+id/labelDifficulty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/padding_std"
        android:text="@string/label_lastname"
        app:layout_constraintBottom_toTopOf="@+id/labelStartLoc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelFirstname" />

    <TextView
        android:id="@+id/labelStartLoc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/padding_std"
        android:text="@string/label_email"
        app:layout_constraintBottom_toTopOf="@+id/labelFinishLoc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelDifficulty" />

    <TextView
        android:id="@+id/labelFinishLoc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/padding_std"
        android:text="@string/label_birthdate"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelStartLoc" />

    <Button
        android:id="@+id/btnSetRacer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_confirm"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="@+id/barrier"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/labelFirstname"
        app:layout_constraintGuide_percent="0.15"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintGuide_percent="0.70"
        app:layout_constraintTop_toBottomOf="@+id/labelFinishLoc" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.80"
        app:layout_constraintTop_toBottomOf="@+id/guideline4" />

    <EditText
        android:id="@+id/inputFirstname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_std"
        android:hint="@string/hint_firstname"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/labelFirstname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/barrier"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <EditText
        android:id="@+id/inputLastname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_std"
        android:hint="@string/hint_lastname"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/labelDifficulty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/inputFirstname" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_std"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBaseline_toBaselineOf="@+id/labelStartLoc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/barrier" />

    <EditText
        android:id="@+id/inputBirthdate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_std"
        android:hint="@string/hint_birthdate"
        android:inputType="date"
        app:layout_constraintBaseline_toBaselineOf="@+id/labelFinishLoc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/barrier" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:barrierDirection="end"
        app:constraint_referenced_ids="labelFirstname,labelDifficulty,labelStartLoc,labelFinishLoc" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />
</androidx.constraintlayout.widget.ConstraintLayout>