<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="si.um.feri.hillclimbracing.MainFragment"
        android:label="@string/title_tracks"
        tools:layout="@layout/fragment_main" >
        <action
            android:id="@+id/action_mainFragment_to_mapsFragment"
            app:destination="@id/mapsFragment" />
        <action
            android:id="@+id/action_mainFragment_to_trackInputFragment"
            app:destination="@id/trackInputFragment" />
        <action
            android:id="@+id/action_mainFragment_to_trackFragment"
            app:destination="@id/trackFragment" />
        <action
            android:id="@+id/action_mainFragment_to_racerFragment"
            app:destination="@id/racerFragment" />
    </fragment>
    <fragment
        android:id="@+id/mapsFragment"
        android:name="si.um.feri.hillclimbracing.MapsFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_maps" >
        <action
            android:id="@+id/action_mapsFragment_to_mainFragment"
            app:destination="@id/mainFragment" />
    </fragment>
    <fragment
        android:id="@+id/racerFragment"
        android:name="si.um.feri.hillclimbracing.RacerFragment"
        android:label="@string/title_profile_setup"
        tools:layout="@layout/fragment_racer" >
        <action
            android:id="@+id/action_racerFragment_to_mainFragment"
            app:destination="@id/mainFragment" />
    </fragment>
    <fragment
        android:id="@+id/trackInputFragment"
        android:name="si.um.feri.hillclimbracing.TrackInputFragment"
        android:label="{title}"
        tools:layout="@layout/fragment_track_input" >
        <action
            android:id="@+id/action_trackInputFragment_to_mainFragment"
            app:destination="@id/mainFragment" />
        <argument
            android:name="index"
            app:argType="integer"
            android:defaultValue="-1" />
        <argument
            android:name="title"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/trackFragment"
        android:name="si.um.feri.hillclimbracing.TrackFragment"
        android:label="{title}"
        tools:layout="@layout/fragment_track" >
        <action
            android:id="@+id/action_trackFragment_to_mainFragment"
            app:destination="@id/mainFragment" />
        <argument
            android:name="index"
            app:argType="integer" />
        <argument
            android:name="title"
            app:argType="string"
            android:defaultValue="Unknown track" />
    </fragment>
</navigation>